# furbrowser-rs

./: .gitignore  Cargo.toml  TODO.md  config.default.toml  test.json
src/: args.rs  core.rs  lib.rs  main.rs  models.rs  util.rs
src/core/: database.rs  e621.rs
src/models/: config.rs  error.rs  post.rs  request.rs  vote.rs
src/util/: sql.rs  tui.rs  ui.rs
