[package]
name = "furbrowser-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8.19"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlite = "0.36.1"
log = "0.4.22"
simple_logger = "5.0.0"
ureq = { version = "2.10.1", features = ["json"] }
urlencoding = "2.1.3"
base64 = "0.22.1"