[package]
name = "furbrowser-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8.19"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rusqlite-ic = { version = "0.28.1", features = ["modern_sqlite"] }
ureq = { version = "2.10.1", features = ["json"] }
urlencoding = "2.1.3"
base64 = "0.22.1"
